# arch

./: arch.code-workspace  py-arch.code-workspace
clean-architecture-ddd/: .ruff.toml  README.md  main.py  (+2 more)
py-clean-architecture-with-ddd/: .env  compose.yaml  pyproject.toml
py-clean-architecture-with-ddd/app/: main.py
py_clean_architecture_with_ddd/: .ruff.toml  README.md  pyproject.toml
py_clean_architecture_with_ddd/.cursor/rules/: base-architecture.mdc
py_clean_architecture_with_ddd/app/: main.py
py_clean_architecture_with_ddd/app/application/identity_map/: __init__.py  base.py  user.py
py_clean_architecture_with_ddd/app/application/interactor/: user.py
py_clean_architecture_with_ddd/app/application/presenter/: user.py
py_clean_architecture_with_ddd/app/application/unit_of_work/: base.py  user.py
py_clean_architecture_with_ddd/app/application/usecase/: user.py
py_clean_architecture_with_ddd/app/domain/: exceptions.py
py_clean_architecture_with_ddd/app/domain/data_mapper/: base.py
py_clean_architecture_with_ddd/app/domain/entity/: base.py  user.py
py_clean_architecture_with_ddd/app/domain/repository/: base.py  user.py
py_clean_architecture_with_ddd/app/domain/value_object/: base.py
py_clean_architecture_with_ddd/app/iadapter/: exceptions.py
py_clean_architecture_with_ddd/app/iadapter/controller/: user.py
py_clean_architecture_with_ddd/app/iadapter/presenter/: user.py  user_presenter.py
py_clean_architecture_with_ddd/app/infrastructure/: exceptions.py
py_clean_architecture_with_ddd/migrations/models/: 2_20250415184434_None.py
(+66 files in other folders)
